<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="46dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/iconmenu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20dp"
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="177dp"
        android:text="@string/Choice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <ImageView
            android:layout_marginLeft="30dp"
            android:id="@+id/imageView9"
            android:layout_width="121dp"
            android:layout_height="120dp"
            app:srcCompat="@drawable/leadership" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:text="@string/Leadership"
            android:textColor="#454444"
            android:textSize="16dp"
            android:textStyle="bold"></TextView>

    </LinearLayout>

    <TextView
        android:textColor="#454444"
        android:textSize="16dp"
        android:textStyle="bold"
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="318dp"
        android:text="@string/Money"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <TextView
            android:textColor="#454444"
            android:textSize="16dp"
            android:textStyle="bold"
            android:id="@+id/textView12"
            android:layout_width="104dp"
            android:layout_height="match_parent"
            android:text="@string/Delivery"
            android:layout_marginStart="22dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textColor="#454444"
                    android:textSize="14dp"
                    android:id="@+id/textView13"
                    android:layout_width="123dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Courier" />

                <Switch
                    android:trackTint="#756c6c"
                    android:thumbTint="@color/switch_color"
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textColor="#454444"
                    android:textSize="14dp"
                    android:id="@+id/textView14"
                    android:layout_width="124dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Pickup" />

                <Switch
                    android:thumbTint="@color/switch_color"
                    android:trackTint="#756c6c"
                    android:checked="true"
                    android:id="@+id/switch3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="341dp"
            android:layout_height="40dp"
            android:hint="@string/YouName"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="341dp"
            android:layout_height="40dp"
            android:hint="@string/Phone_1"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:backgroundTint="#ede066"
        android:textColor="#454444"
        android:id="@+id/button2"
        android:layout_width="338dp"
        android:layout_height="44dp"
        android:layout_marginTop="35dp"
        android:text="@string/Order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <Button
        android:textColor="#454444"
        android:backgroundTint="#ede066"
        android:id="@+id/button3"
        android:layout_width="331dp"
        android:layout_height="46dp"
        android:layout_marginTop="25dp"
        android:text="@string/Website"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

</androidx.constraintlayout.widget.ConstraintLayout>