<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CatalogActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="44dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/iconmenu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="177dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:text="@string/catalog_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="177dp"
        android:text="@string/Category"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TableRow
            android:layout_width="354dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RadioButton
                android:layout_marginLeft="10dp"
                android:id="@+id/radioButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"/>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:src="@drawable/psychology" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="40dp"/>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:src="@drawable/buisness"
                android:layout_marginLeft="-30dp"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Psychology"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Business"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:layout_marginLeft="10dp"
                android:id="@+id/radioButton7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"/>

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:src="@drawable/school" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="40dp"/>

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:src="@drawable/relationship"
                android:layout_marginLeft="-30dp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/School"
                android:textColor="@color/black"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Relationship"
                android:textColor="@color/black"
                android:layout_marginTop="10dp" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="363dp"
        android:layout_height="46dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#ede066"
        android:text="@string/Result"
        android:textColor="#454444"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_marginLeft="20dp"
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:text="@string/Phone"
            android:textColor="@color/black"/>

        <ImageView
            android:layout_marginBottom="15dp"
            android:id="@+id/imageView12"
            android:layout_width="46dp"
            android:layout_height="47dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:src="@drawable/twitter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_marginBottom="15dp"
            android:id="@+id/imageView13"
            android:layout_width="46dp"
            android:layout_height="47dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:src="@drawable/facebook"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_marginBottom="15dp"
            android:id="@+id/imageView14"
            android:layout_width="46dp"
            android:layout_height="47dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:src="@drawable/whatsapp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:id="@+id/imageView15"
            android:layout_width="46dp"
            android:layout_height="47dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:src="@drawable/iconinstagram"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>